<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/menu_movies" />
        <item
            android:id="@+id/nav_tvshow"
            android:icon="@drawable/ic_menu_tvshow"
            android:title="@string/menu_tvshow" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_upcoming"
            android:title="@string/menu_upcoming" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_popular"
            android:title="@string/menu_popular" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
