<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="170dp"
            android:layout_height="210dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/detail_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_name"
            style="@style/TextAppearance.Label"
            android:textAppearance="@style/TextAppearance.Label"
            app:layout_constraintBottom_toBottomOf="@id/detail_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toEndOf="@id/detail_img"
            app:layout_constraintTop_toTopOf="@id/detail_img"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_title_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/detail_text_title"
            app:layout_constraintTop_toBottomOf="@id/detail_text_title"/>

        <TextView
            android:id="@+id/detail_text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_title_date"
            style="@style/TextAppearance.Label"
            app:layout_constraintStart_toStartOf="@id/detail_title"
            app:layout_constraintTop_toBottomOf="@id/detail_title"/>
        
        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/detail_text_date"
            app:layout_constraintTop_toBottomOf="@id/detail_text_date"/>

        <TextView
            android:id="@+id/rating_lael"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lael_rating"
            style="@style/TextAppearance.Label"
            android:textAppearance="@style/TextAppearance.Label"
            app:layout_constraintStart_toStartOf="@id/detail_img"
            app:layout_constraintTop_toBottomOf="@id/detail_img"/>

        <RatingBar
            android:id="@+id/rating_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:max="5"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="@id/rating_lael"
            app:layout_constraintTop_toBottomOf="@id/rating_lael"/>

        <TextView
            android:id="@+id/detail_title_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_overview"
            android:textAppearance="@style/TextAppearance.Label"
            app:layout_constraintStart_toStartOf="@id/rating_ar"
            app:layout_constraintTop_toBottomOf="@id/rating_ar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@id/detail_title_overview"
            app:layout_constraintTop_toBottomOf="@id/detail_title_overview"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>